failed attempt to rotate the camera

--- a/src/template.html
+++ b/src/template.html
@@ -42,10 +42,13 @@
   </head>
 
   <body>
+    <div class="orientation-helper">
+      <p class="orient-alpha">0</p>
+      <p class="orient-beta">0</p>
+      <p class="orient-gamma">0</p>
+    </div>
     <div class="app-container">
-      <div id="overlay">
-        <button id="startButton">Start Demo</button>
-      </div>
+      <div class="start">START</div>
       <div class="three-js"></div>
     </div>
   </body>
